@@ -70,6 +70,7 @@ if (TYPO3_MODE=='BE')	{
 
 	// Setting login box image rotation folder:
 	$TBE_STYLES['loginBoxImage_rotationFolder'] = $temp_eP.'images/login/';
+	$TBE_STYLES['loginBoxImage_author']['loginimage_4_1.jpg'] = 'Photo by Ture Andersen (www.tureandersen.dk)';
 	#$TBE_STYLES['loginBoxImage_rotationFolder'] = '';
 
 	// Setting up stylesheets (See template() constructor!)
